fixed SVG bug that placed the images in the middle of the screen on iOS (phone not tablet)

--- a/src/stylesheets/about.css
+++ b/src/stylesheets/about.css
@@ -13,6 +13,7 @@ h1 {
     padding-bottom: 0%; /*this is your height/width ratio*/
     height: 0;
     margin-bottom: 10%;
+    position: relative;
 }
 
 svg {
@@ -55,5 +56,10 @@ path { fill: transparent; }
 }
 
 @media only screen and (max-device-width : 480px) {
-    
+    .about-svg-container {
+        margin-top: 10%;
+        margin-bottom: 0%;
+        padding-bottom: 22%; /*this is your height/width ratio*/
+        height: 100%;
+    }
 }
